# guru-test

./: .dockerignore  .gitignore  README.md  alembic.ini  pyproject.toml
config/local/: .env.local  Dockerfile  config.toml  docker-compose.yml
docs/: 2_3_2_OPTIMIZATION.md
sql/: 2_1_customer_products.sql  2_2_catalogs_tree.sql  2_3_1_top_products_sale.sql  insert_test_data.sql
src/: run.py
src/application/commands/: supplement_order.py
src/domain/entities/: base.py  catalog.py  client.py  customer.py  nomenclature.py  order.py  order_line.py  product.py
src/domain/enums/: order_status.py
src/domain/exceptions/: base.py  order.py  order_line.py  product.py
src/domain/ports/: catalog_id_generator.py  client_id_generator.py  clock.py  customer_id_generator.py  nomenclature_id_generator.py  order_id_generator.py  order_line_id_generator.py  product_id_generator.py
src/domain/services/: client.py  customer.py  nomenclature.py  order.py  order_line.py  product.py
src/domain/value_objects/: catalog_id.py  catalog_name.py  client_address.py  client_id.py  client_name.py  customer_address.py  customer_id.py  customer_name.py  nomenclature_id.py  nomenclature_name.py  nomenclature_price.py  nomenclature_stock.py  order_id.py  order_line_id.py  order_line_quantity.py  order_total_price.py  product_id.py  product_name.py  product_price.py  product_stock.py
src/infrastructure/adapters/: sqla_order_line_data_mapper.py  sqla_order_reader.py  sqla_product_reader.py  sqla_transaction_manager.py  system_clock.py  (+1 more)
src/setup/: app_factory.py  logging.py
(+34 files in other folders)
