[project]
name = "guru-test"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.3",
    "dishka>=1.7.2",
    "fastapi>=0.128.0",
    "pydantic-settings[toml]>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uuid-utils>=0.14.0",
    "uvicorn>=0.40.0",
    "uvloop>=0.22.1",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.mypy]
python_version = "3.14"
files = [
    "src",
]

warn_unused_configs = true
ignore_missing_imports = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true

no_implicit_optional = true
check_untyped_defs = true

warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true

show_error_codes = true

incremental = true
cache_dir = ".mypy_cache"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
]

indent-width = 4
line-length = 88

target-version = "py314"

[tool.ruff.format]
indent-style = "space"
line-ending = "lf"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true
